@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext "wizard_crpages".
 #
-# Auto generated 24-08-2010 14:48
+# Auto generated 24-08-2010 15:37
 #
 # Manual updates:
 # Only the data in the array - everything else is removed by next
@@ -30,8 +30,8 @@ $EM_CONF[$_EXTKEY] = array(
 	'author' => 'Kasper Skaarhoj',
 	'author_email' => 'kasperYYYY@typo3.com',
 	'author_company' => 'Curby Soft Multimedia',
-	'version' => '1.0.0',
-	'_md5_values_when_last_written' => 'a:7:{s:36:"class.tx_wizardcrpages_webfunc_2.php";s:4:"5d31";s:12:"ext_icon.gif";s:4:"dd33";s:14:"ext_tables.php";s:4:"7e2d";s:13:"locallang.xml";s:4:"c897";s:17:"locallang_csh.xml";s:4:"c7d9";s:23:"cshimages/wizards_1.png";s:4:"4d49";s:23:"cshimages/wizards_2.png";s:4:"4d0f";}',
+	'version' => '1.1.0',
+	'_md5_values_when_last_written' => 'a:8:{s:34:"class.tx_wizardcrpages_webfunc.php";s:4:"7e94";s:36:"class.tx_wizardcrpages_webfunc_2.php";s:4:"2a6b";s:12:"ext_icon.gif";s:4:"dd33";s:14:"ext_tables.php";s:4:"7e2d";s:13:"locallang.xml";s:4:"aef1";s:17:"locallang_csh.xml";s:4:"c7d9";s:23:"cshimages/wizards_1.png";s:4:"4d49";s:23:"cshimages/wizards_2.png";s:4:"4d0f";}',
 	'constraints' => array(
 		'depends' => array(
 			'func_wizards' => '',
